tests/cases/traits/errors/trait-object-generic-method-call.ari
trait Convert {
  fn keep[Value](self, value: Value) -> Value
}

fn use_dyn(item: dyn Convert) -> i64 {
  item.keep(7)
}

fn main() -> i64 {
  0
}
